syntax = "proto3";
option go_package = "src/auth";
package auth;

message LoginRequest {
   string email = 1;
   string password = 2;
}
message LoginResponse {
  string token= 1;
  repeated Role roles = 2;
}
message  Role {
  string user_id = 1;
  string role_id = 2;
}


message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {
  string message = 1;
}

service AuthService{
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse){}
}